# tinytemplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  tinytemplate.cpp  tinytemplate.hpp
cmake/Modules/: PVS-Studio.cmake
tests/: CMakeLists.txt  tinytemplate_tests.cpp
